# Kyrsova_C

KyrsovaRobota/: CMakeLists.txt  Kyrsova.cpp  probs.cpp  probs.h
KyrsovaRobota_vuraz/: CMakeLists.txt  Kyrsova.cpp  probs.cpp
